[package]
name = "bnbt"
version = "1.0.0"
description = "A high-performance Bedrock NBT (Named Binary Tag) library for Rust"
authors = ["NguyenDuck"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blocktopograph/bnbt"
edition = "2024"
keywords = ["nbt", "minecraft", "bedrock", "binary", "serialization", "blocktopograph"]
categories = ["encoding", "game-development", "parser-implementations"]

[dependencies]
byteorder = "1"
paste = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
